@@ -1377,11 +1377,14 @@ Disallows the casting of charm like affects in the area, or against the target m
 PROP_NOCRAFTABILITY=\
 Property   : Prop_NoCraftability\n\r\
 Targets    : ITEMS\n\r\
-Parameters : \n\r\
+Parameters : ([ZAPPERMASK])\n\r\
 Example    : \n\r\
+Example    : -RACE +Elf\n\r\
 Description: \n\r\
 Disallows the item with this property from being learned as a recipe for crafting, \
-even if otherwise qualified.
+even if otherwise qualified.  If placed on a GenRecipe, it prevents the recipe \
+from being listed in crafting.  An optional ZapperMask can narrow the effect only \
+to those who do not pass the mask.
 
 PROP_NODAMAGE=\
 Property   : Prop_NoDamage\n\r\
